1.json을 직접 수정하여 서명 위치 지정하기 2.현재 서명영역이 두 개이상 불러와지지 않음 3. 서명 저장하기를 누르면 500에러가 발생

--- a/backend/get_signature_areas/관상동맥우회술 동의서_signature_areas.json
+++ b/backend/get_signature_areas/관상동맥우회술 동의서_signature_areas.json
@@ -1,8 +1,16 @@
 [
   {
-    "left": 50,
-    "top": 50,
-    "width": 150,
+    "page": 3,
+    "left": 150,
+    "top": 400,
+    "width": 200,
+    "height": 50
+  },
+  {
+    "page": 5,
+    "left": 100,
+    "top": 350,
+    "width": 180,
     "height": 50
   }
 ]
